--- a/cv-tristan-bayol.css
+++ b/cv-tristan-bayol.css
@@ -40,7 +40,7 @@ color:antiquewhite
 
 .title{
 font-family: fantasy;
-color: azure;
+color: rgb(255, 250, 250);
 font-weight: bold;
 font-style: italic;
 }
