--- a/cv-tristan-bayol.css
+++ b/cv-tristan-bayol.css
@@ -1,60 +1,94 @@
-.cv-contenair{
-display: grid;
-grid-template-rows: 1fr 2fr;
-grid-template-areas: "head content";
+.body {
+    background-color: rgb(100, 100, 100);
 }
 
-.cv-head{
-display: grid;
-background-color: rgb(47,45,48);
-color:antiquewhite;
-grid-template-columns: 1fr 2fr;
-grid-template-areas: "head left head-right";  
-}
+.grid-container {
+    display: grid; 
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0px;
+    height: 100%;
+ }
 
-.head-right{
-display: grid;
-padding: 10px;
-padding-left: 25px;
-}
+ #picture {
+    background-color: #000000; 
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-row-end: 1;
+    grid-column-end: 2;
+    border-top: solid rgb(205, 35, 35);
+    border-left: solid rgb(205, 35, 35);
+    border-top-left-radius: 40px;
+    text-align: center;
+       
+ }
 
-.cv-content{
-display: grid;
-grid-template-columns: 1fr 2fr;
-grid-template-areas: "left-part right-part";
-}
+ #profil {
+    background-color: #ffffff; 
+    grid-row-start: 1;
+    grid-column-start: 3;
+    grid-row-end: 1;
+    grid-column-end: 5;
+    border-top: solid rgb(205, 35, 35);
+    border-right: solid black;
+    border-top-right-radius: 40px;
+    padding: 5%;      
+ }
 
-.left-part{
-grid-area: left-part;
-padding: 25px;
-background-color: rgb(5,53,101);
-color:antiquewhite
-}
+ #left {
+    background-color: #000000;
+    color: #ffffff; 
+    grid-row-start: 2;
+    grid-column-start: 2;
+    grid-row-end: 6;
+    grid-column-end: 2;
+    border-bottom: solid black;
+    border-left: solid rgb(205, 35, 35);
+    border-bottom-left-radius: 40px;
+    padding: 10%   
+ }
 
-.right-part{
-grid-area: right-part;
-padding: 25px;
-background-color: rgb(7,76,141);
-color:antiquewhite
-}
 
-.title{
-font-family: fantasy;
-color: rgb(255, 250, 250);
-font-weight: bold;
-font-style: italic;
-}
+ #right {
+    background-color: #ffffff; 
+    grid-row-start: 2;
+    grid-column-start: 3;
+    grid-row-end: 6;
+    grid-column-end: 5;
+    border-bottom: solid black;
+    border-right: solid black;
+    border-bottom-right-radius: 40px;
+    padding: 5%;     
+ }
+
 
 .underligne{
 text-decoration: underline;  
 }
 
+.photo{
+    max-width: 200px;
+    height: auto;
+}
+
 #pdf-logo{
-height: 24px;
-width: 24px;
+    height: 24px;
+    width: 24px;
 }
 
 .skills-logo{
-height: 48px;
-width: 48px;
+    height: 48px;
+    width: 48px;
+}
+
+a {
+    text-decoration: none;
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+
+}
+
+a:hover {
+    transform: scale(1.1);
+
 }
