--- a/index.css
+++ b/index.css
@@ -88,7 +88,41 @@ a {
 
 }
 
-a:hover {
-    transform: scale(1.1);
+
+/* ----------------------------Media queries -----------------------*/
+
+@media only screen and (max-width: 600px) {
+    .photo{
+        max-width: 100px;
+        height: auto;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    #picture {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+
+    #profil {
+        grid-column-start: 2;
+        grid-column-end: 3;
+    }
+
+    #left {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+
+
+    #right {
+        grid-column-start: 2;
+        grid-column-end: 3;
+    }
+
 
 }
